[package]
name = "orca_toolkit"
version = "0.1.0"
edition = "2024"

[dependencies]
anchor-lang = { version = "=0.31.1" }
anchor-spl = { version = "=0.31.1", features = ["metadata", "memo"] }
borsh = "=0.10.4"
solana-program = "2.2.1"
solana-client = "2.2.1"
solana-sdk  = "2.2.1"
spl-associated-token-account= "3.0.0"
solana-transaction-status = "2.2.1"
